arregle el titulo

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                  </div>
                  
               <div class="col">
-                <h4 class="titulo_2 fw-bolder titulo text-center tracking-in-contract-bck">¡Tenemos la<br> solución que estas <br> buscando!</h4>	
+                <h4 class="titulo_2 fw-bolder titulo text-center ">¡Tenemos la<br> solución que estas <br> buscando!</h4>	
               </div>              
             </div>
           </div>
