--- a/contacto.html
+++ b/contacto.html
@@ -77,19 +77,19 @@
               <div class="col">
                 <div class="mb-3">
                     <label for="formGroupExampleInput" class="form-label">Nombre</label>
-                    <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Nombre">
+                    <input type="text" class="form-control input" id="formGroupExampleInput" placeholder="Nombre">
                   </div>
                   <div class="mb-3">
-                    <label for="formGroupExampleInput2" class="form-label">Apellido</label>
-                    <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Apellido">
+                    <label for="formGroupExampleInput2" class="form-label ">Apellido</label>
+                    <input type="text" class="form-control input input1" id="formGroupExampleInput2" placeholder="Apellido">
                   </div>
                   <div class="mb-3">
                     <label for="formGroupExampleInput" class="form-label">Telefono</label>
-                    <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Telefono">
+                    <input type="text" class="form-control input" id="formGroupExampleInput" placeholder="Telefono">
                   </div>
                   <div class="mb-3">
                     <label for="formGroupExampleInput2" class="form-label">Email</label>
-                    <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Email">
+                    <input type="text" class="form-control input" id="formGroupExampleInput2" placeholder="Email">
                   </div>
                   <select class="form-select" aria-label="Default select example">
                     <option selected>Artefacto</option>
@@ -101,7 +101,7 @@
                     <option value="3">OTRO</option>
                   </select>
                   <div class="form-floating">
-                    <textarea class="form-control" placeholder="Deje un comentario" id="floatingTextarea"></textarea>
+                    <textarea class="form-control input" placeholder="Deje un comentario" id="floatingTextarea"></textarea>
                     <label for="floatingTextarea">Envie su comentario</label>
                   </div><br><br>
                   <button type="button" class="btn btn-primary">ENVIAR</button>
