correcion gramatica a principal

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="index.html">Prinsipal</a>
+                <a class="nav-link active" aria-current="page" href="index.html">Principal</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="contacto.html">contacto</a>
@@ -143,7 +143,7 @@
                 <div class="row">
                   <div class="col">
                     <div class="card scale" style="width: 18rem;">
-                        <img src="./prinsipal/tv.jpg" class="card-img-top" alt="...">
+                        <img src="./principal/tv.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                           <p class="card-text">TV LCD -LED- SMART Arreglamos: fuente de alimentación, Placa main, Backlight, Retroiluminación, Falta de imagen, muchos arreglos más. Trabajamos todas las marcas.</p>
                         </div>
@@ -151,7 +151,7 @@
                   </div>
                   <div class="col">
                     <div class="card scale" style="width: 18rem;">
-                        <img src="./prinsipal/notebook_.jpg" class="card-img-top" alt="...">
+                        <img src="./principal/notebook_.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                           <p class="card-text">PC - NOTEBOOK
                             Reparación y mantenimiento de Pc de escritorio, Notebook, All in one y Netbook. Solucionamos problemas de Software y Hardware. Actualización de sistema y armado de pc, etc.</p>
@@ -160,7 +160,7 @@
                   </div>
                   <div class="col">
                     <div class="card scale" style="width: 18rem;">
-                        <img src="./prinsipal/tablet.png" class="card-img-top" alt="...">
+                        <img src="./principal/tablet.png" class="card-img-top" alt="...">
                         <div class="card-body">
                           <p class="text-center">TABLET - GPS
                             Realizamos cambio de pantalla, display, Pines de carga y otras fallas, trabajamos todas las marcas.</p>
@@ -169,7 +169,7 @@
                   </div>
                   <div class="col">
                     <div class="card scale" style="width: 18rem;">
-                        <img src="./prinsipal/parlante.jpg" class="card-img-top" alt="...">
+                        <img src="./principal/parlante.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                           <p class="text-center">Reparacion de parlantes bluetooth -pin de carga- - alimentacion - .</p>
                         </div>
@@ -177,7 +177,7 @@
                   </div>
                   <div class="col">
                     <div class="card scale" style="width: 18rem;">
-                        <img src="./prinsipal/monitor.jfif" class="card-img-top" alt="...">
+                        <img src="./principal/monitor.jfif" class="card-img-top" alt="...">
                         <div class="card-body">
                           <p class="card-text">Reparacion de MONITORES Pc.</p>
                         </div>
@@ -185,7 +185,7 @@
                   </div>
                   <div class="col">
                     <div class="card scale" style="width: 18rem;">
-                        <img src="./prinsipal/microondas.jpg" class="card-img-top" alt="...">
+                        <img src="./principal/microondas.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                           <p class="text-center">Miroondas <br> no enciende- no calienta - no abre la puesta, Tenemos la solucion -.</p>
                         </div>
@@ -207,7 +207,7 @@
           <div class="container">
             <div class="row">
               <div class="col">
-                <img data-aos="flip-up" class="clienHeight"   src="./prinsipal/clientes.jpg" class="card-img-top" alt="...">
+                <img data-aos="flip-up" class="clienHeight"   src="./principal/clientes.jpg" class="card-img-top" alt="...">
               </div>              
             </div>
           </div>          
