--- a/reparaciones.html
+++ b/reparaciones.html
@@ -51,7 +51,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="index.html">Prinsipal</a>
+                <a class="nav-link active" aria-current="page" href="index.html">Principal</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="contacto.html">contacto</a>
@@ -96,7 +96,7 @@
             <div class="row">
               <div class="col">
                 <div data-aos="flip-up" class="card" style="width: 18rem;">
-                    <img src="./prinsipal/tv.jpg" class="card-img-top" alt="...">
+                    <img src="./principal/tv.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                       <p class="card-text">Reparamos Tv LCD - LED - SMART.</p>
                     </div>
@@ -104,7 +104,7 @@
               </div>
               <div class="col">
                 <div data-aos="flip-up" class="card" style="width: 18rem;">
-                    <img src="./prinsipal/monitor.jfif" class="card-img-top" alt="...">
+                    <img src="./principal/monitor.jfif" class="card-img-top" alt="...">
                     <div class="card-body">
                       <p class="card-text">Reparamos monitores de Pc.</p>
                     </div>
@@ -112,7 +112,7 @@
               </div>
               <div class="col">
                 <div data-aos="flip-up" class="card" style="width: 18rem;">
-                    <img src="./prinsipal/microondas.jpg" class="card-img-top" alt="...">
+                    <img src="./principal/microondas.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                       <p class="card-text">Reparamos Microondas.</p>
                     </div>
@@ -124,7 +124,7 @@
             <div class="row">
               <div class="col">
                 <div data-aos="flip-up" class="card" style="width: 18rem;">
-                    <img src="./prinsipal/notebook_.jpg" class="card-img-top" alt="...">
+                    <img src="./principal/notebook_.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                       <p class="card-text">Reparamos NOTEBOOK.</p>
                     </div>
@@ -132,7 +132,7 @@
               </div>
               <div data-aos="flip-up" class="col">
                 <div class="card" style="width: 18rem;">
-                    <img src="./prinsipal/pc_escritorio.jpg" class="card-img-top" alt="...">
+                    <img src="./principal/pc_escritorio.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                       <p class="card-text">Reparamos Pc de escritorio.</p>
                     </div>
@@ -140,7 +140,7 @@
               </div>
               <div class="col">
                 <div data-aos="flip-up" class="card" style="width: 18rem;">
-                    <img src="./prinsipal/tablet.png" class="card-img-top" alt="...">
+                    <img src="./principal/tablet.png" class="card-img-top" alt="...">
                     <div class="card-body">
                       <p class="card-text">Reparamos tablet.</p>
                     </div>
