--- a/contacto.html
+++ b/contacto.html
@@ -51,7 +51,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="index.html">Prinsipal</a>
+                <a class="nav-link active" aria-current="page" href="index.html">Principal</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="contacto.html">contacto</a>
